fixed spacing in create Hike form

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -11,7 +11,13 @@
   justify-content: space-between;
   background-color: white;
   border-radius: 10px;
-  padding: 16px
+  padding-left: 16px;
+  padding-bottom: 0;
+  padding-top: 16px;
+
+    // p {
+    //   padding-left: 16px
+    // }
 }
 
 .hike-page-info-card {
@@ -30,10 +36,11 @@
 }
 
 .edit-delete-icons {
-  padding: 16px;
+  padding-left: 16px;
+  padding-right: 16px;
   background-color: white;
   border-radius: 10px;
-  width: 25%;
+  width: 20%;
 
   a {
     text-decoration: none;
